[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/EBGaramond-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ScriptEditor(WIP)/scriptEditor.gd" type="Script" id=2]
[ext_resource path="res://ScriptEditor(WIP)/popupTheme.tres" type="Theme" id=3]
[ext_resource path="res://ScriptEditor(WIP)/editor.gd" type="Script" id=4]
[ext_resource path="res://fonts/ubuntu.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 2
outline_color = Color( 0.352941, 0.596078, 0.580392, 1 )
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 100

[node name="editor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
color = Color( 0.168627, 0.160784, 0.160784, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="editor"]
margin_left = 5.34296
margin_top = 1.32266
margin_right = 323.343
margin_bottom = 121.323
rect_min_size = Vector2( 120, 120 )
custom_fonts/font = SubResource( 1 )
text = "Script Editor"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tlLabel" type="Label" parent="editor"]
margin_left = 364.783
margin_top = 37.0319
margin_right = 617.783
margin_bottom = 97.0322
custom_fonts/font = ExtResource( 5 )
text = "Timeline Name:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tlname" type="LineEdit" parent="editor"]
margin_left = 628.505
margin_top = 39.0102
margin_right = 901.505
margin_bottom = 96.0102
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.498039, 0.407843, 0.407843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="editor"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -959.0
margin_top = -866.0
margin_right = 632.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 5 )
custom_constants/line_spacing = 4
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
wrap_enabled = true
caret_blink = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
field_val_color = Color( 0.0196078, 0.47451, 0.356863, 1 )
line_comment_color = Color( 0.607843, 0.658824, 0.513726, 1 )

[node name="manual" type="Button" parent="editor"]
margin_left = 16.9966
margin_top = 140.993
margin_right = 319.997
margin_bottom = 190.993
custom_fonts/font = ExtResource( 5 )
text = "User Manual (NA)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="HBoxContainer" parent="editor"]
margin_left = 366.281
margin_top = 141.421
margin_right = 783.281
margin_bottom = 188.421
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saveButton" type="Button" parent="editor/buttons"]
margin_right = 88.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.454902, 0, 0, 1 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadButton" type="Button" parent="editor/buttons"]
margin_left = 138.0
margin_right = 230.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.372549, 0.486275, 0.0196078, 1 )
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jsonButton" type="Button" parent="editor/buttons"]
margin_left = 280.0
margin_right = 417.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.0901961, 0.0509804, 0.588235, 1 )
text = "To .json"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dvarButton" type="Button" parent="editor/buttons"]
margin_left = 467.0
margin_right = 556.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dvar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="editor"]
margin_right = 953.0
margin_bottom = 611.0
input_pass_on_modal_close_click = false
theme = ExtResource( 3 )
popup_exclusive = true
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.txt", "*.json" )

[node name="AcceptDialog" type="AcceptDialog" parent="editor"]
margin_right = 491.0
margin_bottom = 249.0
theme = ExtResource( 3 )
window_title = "Success!"
dialog_text = "
To Json success! You can find it in the VNScript folder."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="helperPopup" type="AcceptDialog" parent="editor"]
margin_right = 1048.0
margin_bottom = 689.0
window_title = ""

[node name="richText" type="RichTextLabel" parent="editor/helperPopup"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1040.0
margin_bottom = 631.0
bbcode_enabled = true

[connection signal="text_changed" from="editor/tlname" to="editor" method="_on_tlname_text_changed"]
[connection signal="pressed" from="editor/buttons/saveButton" to="editor" method="_on_saveButton_pressed"]
[connection signal="pressed" from="editor/buttons/loadButton" to="editor" method="_on_loadButton_pressed"]
[connection signal="pressed" from="editor/buttons/jsonButton" to="editor" method="_on_jsonButton_pressed"]
[connection signal="pressed" from="editor/buttons/dvarButton" to="editor" method="_on_dvarButton_pressed"]
[connection signal="file_selected" from="editor/FileDialog" to="editor" method="_on_FileDialog_file_selected"]
